Add new changes to note maker

--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-PORT=6800
-//MONGO_URL=mongodb://127.0.0.1:27017/note-maker
-MONGO_URL=mongodb+srv://vivek-1234:Note-vivek-1234@note-maker.2uqqq.mongodb.net/?retryWrites=true&w=majority
-NODE_ENV=production
+# MONGO_URL=mongodb://127.0.0.1:27017/note-maker
+MONGO_URL=mongodb+srv://@notemaker.8dzpyec.mongodb.net/?retryWrites=true&w=majority&appName=NoteMaker
