--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server/index.js"
+    "dev": "nodemon server/app.js",
+    "start": "node server/app.js"
   },
   "author": "Vivek Ranjan",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "nodemon": "^3.1.2"
   }
 }
