--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "note-maker",
   "version": "1.0.0",
   "description": "note-maker",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server/app.js",
