--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@draft-js-plugins/anchor": "^4.2.1",
     "@draft-js-plugins/editor": "^4.1.4",
     "@draft-js-plugins/image": "^4.1.4",
+    "@draft-js-plugins/video": "^4.1.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.3",
