--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,6 @@
   "private": true,
   "proxy": "http://localhost:6800",
   "dependencies": {
-    "@draft-js-plugins/anchor": "^4.2.1",
-    "@draft-js-plugins/editor": "^4.1.4",
-    "@draft-js-plugins/image": "^4.1.4",
-    "@draft-js-plugins/video": "^4.1.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.3",
@@ -18,10 +14,9 @@
     "axios": "^0.27.2",
     "classnames": "^2.5.1",
     "dotenv": "^16.0.1",
-    "draft-js": "^0.11.7",
-    "draft-js-export-html": "^1.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
