Markdown editor added

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@uiw/react-markdown-editor": "^6.1.2",
     "axios": "^0.27.2",
     "classnames": "^2.5.1",
     "dotenv": "^16.0.1",
